Moved launch target to zerolog-benchmark