@@ -160,33 +160,6 @@ dependencies {
   compile "com.obsidiandynamics.fulcrum:fulcrum-func:${fulcrumVersion}"
   compile "com.obsidiandynamics.fulcrum:fulcrum-io:${fulcrumVersion}"
   compile "com.obsidiandynamics.fulcrum:fulcrum-props:${fulcrumVersion}"
-
-  testRuntime "com.obsidiandynamics.fulcrum:fulcrum-launcher:${fulcrumVersion}"
-}
-
-project.ext.set("launcherClasspath", new org.gradle.api.internal.file.UnionFileCollection())
-project.ext.set("launcherClasses", new ArrayList())
-
-task addLauncherApps() {
-  project(":").launcherClasspath += sourceSets.main.runtimeClasspath + sourceSets.test.runtimeClasspath
-}
-
-task launch() {
-  dependsOn allprojects*.tasks*.findByName("testClasses")
-  doLast {
-    def perfJvmArgs = "-XX:-MaxFDLimit -XX:+TieredCompilation -XX:+UseNUMA -XX:+UseCondCardMark " + 
-                      "-XX:+UseBiasedLocking -Xms2G -Xmx2G -Xss1M -XX:+UseG1GC -XX:MaxGCPauseMillis=200 " + 
-                      "-XX:InitiatingHeapOccupancyPercent=0 -Djava.net.preferIPv4Stack=true " + 
-                      "-Dlauncher.package.compress.level=3"
-    javaexec {
-      systemProperties = System.properties
-      classpath = project(":").launcherClasspath
-      main = "com.obsidiandynamics.launcher.Launcher"
-      args = project(":").launcherClasses
-      jvmArgs = Arrays.asList(perfJvmArgs.split(" ")) + baseJvmArgs
-      standardInput = System.in
-    }
-  }
 }
 
 jar {
